--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,8 @@
 parameters:
 
 services:
+    App\Form\AdminType: # Asigură-te că folosești App\Form\AdminType
+        tags: ['form.type']
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
