--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,6 +4,9 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        App\Entity\Admin: 'auto'  # Asigură-te că Admin este acoperit
+        App\Entity\User: 'auto'     # Asigură-te că User este acoperit
+
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         # used to reload user from session & other features (e.g. switch_user)
@@ -11,6 +14,10 @@ security:
             entity:
                 class: App\Entity\User
                 property: username
+        app_admin_provider:          # Adaugă un provider pentru Admin
+            entity:
+                class: App\Entity\Admin
+                property: username        
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
