--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,23 +1,26 @@
 security:
+    # Hierarhia rolurilor utilizatorilor
     role_hierarchy:
         ROLE_ADMIN: [ROLE_USER]
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
+
+    # Configurarea hash-urilor pentru parole
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-        App\Entity\Admin: 'auto'  # Asigură-te că Admin este acoperit
-        App\Entity\User: 'auto'     # Asigură-te că User este acoperit
+        App\Entity\Admin: 'auto'
+        App\Entity\User: 'auto'
 
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+    # Providerii utilizatorilor
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
                 class: App\Entity\User
                 property: username
-        app_admin_provider:          # Adaugă un provider pentru Admin
+        app_admin_provider:
             entity:
                 class: App\Entity\Admin
-                property: username        
+                property: username
+
+    # Configurarea firewall-urilor
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -31,30 +34,11 @@ security:
                 enable_csrf: true
             logout:
                 path: app_logout
-                # where to redirect after logout
-                # target: app_any_route
+                target: home  # Poți schimba la ruta dorită
+            # Elimină opțiunea `anonymous`
+            # anonymous: true  # Această linie trebuie ștearsă
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
+    # Controlul accesului
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
-
-when@test:
-    security:
-        password_hashers:
-            # By default, password hashers are resource intensive and take time. This is
-            # important to generate secure password hashes. In tests however, secure hashes
-            # are not important, waste resources and increase test times. The following
-            # reduces the work factor to the lowest possible values.
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
