--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,15 +1,12 @@
 security:
-    # Hierarhia rolurilor utilizatorilor
     role_hierarchy:
         ROLE_ADMIN: [ROLE_USER]
 
-    # Configurarea hash-urilor pentru parole
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
         App\Entity\Admin: 'auto'
         App\Entity\User: 'auto'
 
-    # Providerii utilizatorilor
     providers:
         app_user_provider:
             entity:
@@ -20,7 +17,6 @@ security:
                 class: App\Entity\Admin
                 property: username
 
-    # Configurarea firewall-urilor
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -34,11 +30,8 @@ security:
                 enable_csrf: true
             logout:
                 path: app_logout
-                target: home  # Poți schimba la ruta dorită
-            # Elimină opțiunea `anonymous`
-            # anonymous: true  # Această linie trebuie ștearsă
+                target: home
 
-    # Controlul accesului
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
